--- a/bromolow_user_config.json
+++ b/bromolow_user_config.json
@@ -1,11 +1,13 @@
 {
-    "extra_cmdline": {
-        "pid": "0x0001",
-        "vid": "0x46f4",
-        "sn": "1234XXX123",
-        "mac1": "XXYYXXYYXXYY"
-    },
-    "synoinfo": {},
-    "ramdisk_copy": {},
-    "extensions": []
+  "extra_cmdline": {
+    "vid": "0x8086",
+    "pid": "0xA0ED",
+    "sn": "17A0PDN123456",
+    "mac1": "001132123456"
+  },
+  "synoinfo": {
+    "supportsystemperature": "no",
+    "supportsystempwarning": "no"
+  },
+  "ramdisk_copy": {}
 }
