--- a/.github/workflows/kiwi.yaml
+++ b/.github/workflows/kiwi.yaml
@@ -1,7 +1,12 @@
 name: kiwi构建
 
-on: [push]
-
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+    
 jobs:
   build:
     runs-on: ubuntu-latest
